<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Budget Watch</string>
    <string name="icon">icon</string>
    <string name="budgetsTitle">Budgets</string>
    <string name="addBudgetTitle">Add Budget</string>
    <string name="viewBudgetTitle">View Budget</string>
    <string name="editBudgetTitle">Edit Budget</string>
    <string name="budgetDescription">Create and manage budgets</string>
    <string name="transactionsTitle">Transactions</string>
    <string name="transactionsDescription">Enter transactions and revenues</string>
    <string name="addExpenseTransactionTitle">Add Expense</string>
    <string name="editExpenseTransactionTitle">Edit Expense</string>
    <string name="viewExpenseTransactionTitle">View Expense</string>
    <string name="addRevenueTransactionTitle">Add Revenue</string>
    <string name="editRevenueTransactionTitle">Edit Revenue</string>
    <string name="viewRevenueTransactionTitle">View Revenue</string>
    <string name="importExportTitle">Import/Export</string>
    <string name="totalBudgetTitle">Total</string>
    <string name="addShortcutsTitle">Add Budget Watch Shortcut</string>
    <string name="addExpenseTransactionShortcutTitle">Add Expense Shortcut</string>
    <string name="addRevenueTransactionShortcutTitle">Add Revenue Shortcut</string>

    <string name="add">Add</string>
    <string name="selectDates">Select Dates</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="account">Account</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="receipt">Receipt</string>
    <string name="capture">Capture</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="clean">Clean</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="confirm">Confirm</string>

    <string name="Grocery">Grocery</string>
    <string name="one_hundred">100</string>
    <string name="fraction">%1$d/%2$d</string>

    <string name="budgetTypeMissing">Budget type is empty</string>
    <string name="budgetValueMissing">Budget value is empty</string>
    <string name="budgetMissing">No budget selected</string>
    <string name="valueMissing">Value is empty</string>
    <string name="valueInvalid">Value invalid</string>
    <string name="dateInvalid">Date invalid</string>

    <string name="expensesTitle">Expenses</string>
    <string name="revenuesTitle">Revenues</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- A date range, where both arguments are date strings -->
    <string name="dateRangeFormat">%1$s ~ %2$s</string>

    <string name="noBudgets">You don\'t have any budgets at the moment. Click the "+" (plus) button up top to get started.\n\nBudget Watch lets you create budgets, then track spending during the month.</string>
    <string name="noExpenses">You don\'t have any expense transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="noExpensesForBudget">You don\'t have any expense transactions for budget \"%1$s\"</string>
    <string name="noRevenues">You don\'t have any revenue transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="noRevenuesForBudget">You don\'t have any revenue transactions for budget \"%1$s\"</string>

    <string name="budgetDateRangeHelp">Select date range to display for budgets</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="startDateAfterEndDate">Start date must be on or before end date</string>

    <string name="cleanupHelp">Select date; all receipts on or before the date will be deleted</string>

    <string name="importExport">Import/Export</string>
    <string name="exportName">Export</string>
    <string name="dateRangeField">Date Range:</string>
    <string name="allDates">All Dates</string>
    <string name="changeDateRange">Change date range</string>
    <string name="exportDateRangeHelp">Select date range of transactions to export</string>
    <string name="importedFrom">Imported from: %1$s</string>
    <string name="fileFormat">File format</string>
    <string name="exportedTo">Exported to: %1$s</string>
    <string name="importFailed">Failed to import: %1$s</string>
    <string name="exportFailed">Failed to export: %1$s</string>
    <string name="importing">Importing&#8230;</string>
    <string name="exporting">Exporting&#8230;</string>

    <string name="purgeOldReceipts">Purge Old Receipts</string>
    <string name="cleaning">Cleaning&#8230;</string>

    <string name="loading">Loading&#8230;</string>

    <string name="pictureCaptureError">Unable to capture image with camera</string>
    <string name="noCameraPermissionError">Unable to capture receipt without the camera permission</string>

    <string name="iconDescription">BudgetWatch icon</string>
    <string name="addExpenseDescription">Add an expense transaction</string>

    <string name="about">About</string>
    <string name="app_copyright_fmt">Copyright 2016-<xliff:g>%d</xliff:g> Branden Archer</string>
    <string name="app_license">Licensed under the GPLv3.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries"><xliff:g id="app_name">%s</xliff:g> uses the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_resources"><xliff:g id="app_name">%s</xliff:g> uses the following third-party resources: <xliff:g id="app_resources_list">%s</xliff:g></string>

    <string name="settings">Settings</string>
    <string name="receiptQuality">Receipt Quality</string>
    <string name="receiptQualitySummary">Select the JPEG quality used when capturing receipt images</string>
    <string name="encodingReceipt">Encoding receipt</string>

    <string name="deleteBudgetTitle">Remove Budget</string>
    <string name="deleteBudgetConfirmation">Please confirm that you want to delete this budget. All transactions associated with this budget will remain.</string>
    <string name="deleteTransactionTitle">Remove Transaction</string>
    <string name="deleteTransactionConfirmation">Please confirm that you want to delete this transaction.</string>

    <string name="csv" translatable="false">CSV</string>
    <string name="json" translatable="false">JSON</string>
    <string name="zip" translatable="false">Zip</string>

    <string name="importExportHelp">Backed up data can allow you to move your budgets and transactions to another device.</string>
    <string name="importSuccessfulTitle">Import successful</string>
    <string name="importFailedTitle">Import failed</string>
    <string name="exportSuccessfulTitle">Export successful</string>
    <string name="exportFailedTitle">Export failed</string>
    <string name="noExternalStoragePermissionError">Unable to import or export cards without the external storage permission</string>
    <string name="exportOptionExplanation">Data is written to the top directory in external storage.</string>
    <string name="importOptionFilesystemTitle">Import from filesystem</string>
    <string name="importOptionFilesystemExplanation">Choose a specific file from the filesystem.</string>
    <string name="importOptionFilesystemButton">From filesystem</string>
    <string name="importOptionApplicationTitle">Import from filesystem</string>
    <string name="importOptionApplicationExplanation">Use an external application like Dropbox, Google Drive, or your favorite file manager to open a file.</string>
    <string name="importOptionApplicationButton">Use external application</string>
    <string name="importOptionFixedTitle">Import from export location</string>
    <string name="importOptionFixedExplanation">Import from the same location on the filesystem that is written to on export.</string>
    <string name="importOptionFixedButton">Use export location</string>
    <string name="sendLabel">Send&#8230;</string>

    <string name="search">Search</string>
    <string name="searchHint">Search&#8230;</string>
    <string name="searchEmptyExpenses">No matching expense transactions.</string>
    <string name="searchEmptyRevenues">No matching revenue transactions.</string>

    <string name="addExpenseDisabled">Adding an expense is disabled</string>
    <string name="addRevenueDisabled">Adding a revenue is disabled</string>

    <string name="startIntro">Start Intro</string>
    <string name="intro1Title">Welcome to Budget Watch\n</string>
    <string name="intro1Description">Manage your budget by tracking you spending.</string>
    <string name="intro2Title">Budgets\n</string>
    <string name="intro2Description">You may create as many budgets as you would like to track, each with their own max monthly spending.\n\nTo create a budget, touch Budgets from the main screen, then click the plus in the menu.</string>
    <string name="intro3Title">Transactions\n</string>
    <string name="intro3Description">After creating a budget, transactions can be added that apply to budgets.\n\nTo create a transaction touch Transactions from the main screen. Select the Expenses or Revenues tab and click on the plus in the menu.</string>
    <string name="intro4Title">Filtering\n</string>
    <string name="intro4Description">Touching a budget will show all transactions for that budget.</string>
    <string name="intro5Title">Budget Window\n</string>
    <string name="intro5Description">By default the budgets show the current month\'s spending. To change the time window, touch the calendar icon in the menu.</string>
    <string name="intro6Title">Export and Import\n</string>
    <string name="intro6Description">Budget and transactions can be backed-up. To export or import data touch the Import/Export icon in the menu on the main page.</string>
    <string name="intro7Title">Feedback\n</string>
    <string name="intro7Description">This app is free, ad-free, and open source. See details by touching About in the menu on the main page.\n\nPlease leave feedback in the app store! (:</string>

    <string name="exportProgressFormat">Exported <xliff:g id="completed">%d</xliff:g> of <xliff:g id="total">%d</xliff:g> entries</string>
    <string name="importProgressFormat">Imported <xliff:g id="completed">%d</xliff:g> entries</string>

    <string name="addShortcuts">Add Shortcuts</string>
    <string name="shortcutsAdded">Shortcuts added</string>

    <string name="enterPasswordTitle">Authorization</string>
    <string name="prompt_password">Password</string>
    <string name="enterPasswordButton">Enter</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="createPasswordTitle">Create Password</string>
    <string name="password_protection">Password Protection</string>
    <string name="createPasswordButton">Create Password</string>
    <string name="changePasswordButton">Change Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="usePasswordButton">Use Password Protection</string>
    <string name="passwords_mismatch">Passwords does not match</string>
    <string name="passwordClearedMessage">Password Protection Disabled</string>
    <string name="passwordCreatedMessage">Password Created Successfully</string>

</resources>
