<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_import_export"
        android:icon="@drawable/ic_import_export_white_24dp"
        android:title="@string/importExport"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_intro"
        android:title="@string/startIntro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>