<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical"
                      android:padding="5.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:labelFor="@+id/name"
                          android:text="@string/name" />
                <EditText android:id="@+id/nameEdit"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:id="@+id/nameView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="20.0dip"
                    android:paddingEnd="20.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/budgetSpinner"
                    android:text="@string/budget" />
                <Spinner
                    android:id="@+id/budgetSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:drawSelectorOnTop="true" />
                <TextView android:id="@+id/budgetView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:labelFor="@+id/account"
                          android:text="@string/account" />
                <EditText android:id="@+id/accountEdit"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:id="@+id/accountView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:labelFor="@+id/value"
                          android:text="@string/value" />
                <EditText android:id="@+id/valueEdit"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="numberDecimal"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:id="@+id/valueView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:labelFor="@+id/note"
                          android:text="@string/note" />
                <EditText android:id="@+id/noteEdit"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:id="@+id/noteView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:labelFor="@+id/date"
                          android:text="@string/date" />
                <EditText android:id="@+id/dateEdit"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="date"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:id="@+id/dateView"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="10dip"
                          android:paddingBottom="10dip"
                          android:textIsSelectable="true"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:id="@+id/receiptLayout"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_medium"
                          android:textStyle="bold"
                          android:layout_gravity="center_vertical"
                          android:paddingStart="20.0dip"
                          android:paddingEnd="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/receipt" />
                <TextView android:id="@+id/receiptLocation"
                          android:layout_height="0dp"
                          android:layout_width="0dp"
                          android:visibility="gone" />
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:baselineAligned="true"
                              android:visibility="gone"
                              android:id="@+id/noReceiptButtonLayout">
                    <Button android:id="@+id/captureButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/capture"
                            android:layout_weight="1.0"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:baselineAligned="true"
                              android:visibility="gone"
                              android:id="@+id/hasReceiptButtonLayout">
                    <Button android:id="@+id/viewButton"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view"
                            android:layout_weight="1.0"/>
                    <Button android:id="@+id/updateButton"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update"
                            android:visibility="gone"
                            android:layout_weight="1.0"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:padding="5.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:baselineAligned="true">
                <Button android:id="@+id/cancelButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_weight="1.0" />
                <Button android:id="@+id/saveButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>